# computer-graphics-bounding-volume-hierarchy

./: .gitmodules  CMakeLists.txt  README.html  README.md  README.tex.md  distances.cpp  intersections.cpp  rays.cpp
include/: AABBTree.h  BoundingBox.h  CloudPoint.h  MeshTriangle.h  Object.h  Ray.h  VectorXb.h  box_box_intersect.h  box_edges.h  find_all_intersecting_pairs_using_AABBTrees.h  insert_box_into_box.h  insert_triangle_into_box.h  k_nearest_neighbors_brute_force.h  k_nearest_neighbors_using_AABBTree.h  nearest_neighbor_brute_force.h  point_AABBTree_squared_distance.h  point_box_squared_distance.h  point_triangle_squared_distance.h  ray_intersect_box.h  ray_intersect_triangle.h  ray_intersect_triangle_mesh_brute_force.h  tictoc.h  triangle_triangle_intersection.h  visualize_aabbtree.h  warnings.h
markdown/: header.md
src/: AABBTree.cpp  AABBTree_ray_intersect.cpp  box_box_intersect.cpp  find_all_intersecting_pairs_using_AABBTrees.cpp  insert_box_into_box.cpp  insert_triangle_into_box.cpp  nearest_neighbor_brute_force.cpp  point_AABBTree_squared_distance.cpp  point_box_squared_distance.cpp  point_triangle_squared_distance.cpp  ray_intersect_box.cpp  ray_intersect_triangle.cpp  ray_intersect_triangle_mesh_brute_force.cpp  triangle_triangle_intersection.cpp
